Teach CRFO:CapturePageText to recognize page refreshes with long delays.

In some cases, news sites put longish delays (over 1s) on their
refresh meta tags, in order to update the page periodically.
We should recognize this and not bail (as we used to) on page
text capture on these types of pages -- so that the translate
bubble/bar shows up.

BUG=592360
R=esprehn,jochen

Review URL: https://codereview.chromium.org/1774663002

Cr-Commit-Position: refs/heads/master@{#379884}

Former-commit-id: 09edaa833dbbbba00648dadbb559d2b575be67bf